# frothy

./: Cargo.toml  README.md  test.fy
src/: ast.rs  error.rs  eval.rs  lib.rs  main.rs  token.rs  util.rs  value.rs
