[package]
name = "frothy"
version = "0.2.0"
authors = ["Cameron Phillips <cameron0505@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "frothy"
path = "src/lib.rs"

[[bin]]
name = "frothy"
path = "src/bin/main.rs"

[dependencies]
